--- a/web/css/style.css
+++ b/web/css/style.css
@@ -170,10 +170,11 @@ body {
 
 .content {
     width: 70%;
-    height: 1000px;
+    height: 100%;
     display: flex;
     align-items: stretch;
     margin: auto;
+    margin-bottom: 50px;
 }
 
 /* content-left */
