--- a/web/css/upload_book.css
+++ b/web/css/upload_book.css
@@ -53,6 +53,7 @@
 
 .elements> .title > i{
     margin-right: 5px;
+    width: 17%;
 }
 
 .elements> .input{
@@ -70,6 +71,7 @@
 .elements textarea{
     width: 100%;
     background: #F9F7F4;
+    padding: 7px 7px;
 }
 
 .check-rules{
@@ -110,6 +112,7 @@
     width: 100%;
     height: 70px;
     margin-top: 5px;
+    padding: 7px 7px;
 }
 
 .borrow-book{
@@ -184,6 +187,7 @@
     height: auto;
     margin-top: 5px;
     background: #F9F7F4;
+    padding: 7px 7px;
     border: none;
 }
 
