--- a/web/css/style.css
+++ b/web/css/style.css
@@ -255,7 +255,7 @@ body {
 
 .section-center {
     width: 100%;
-    height: 300px;
+    height: auto;
     margin-top: 20px;
     border: 1px solid #D8D8D8;
 }
@@ -327,4 +327,114 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
+}
+
+/* ==================== Search result =====================*/
+.search-nav .type-list {
+    margin-top: 20px;
+    display: inline-block;
+    list-style: none;
+}
+
+.search-nav span {
+    font-size: 14px;
+    padding: 9px 0px 11px;
+    display: inline-block;
+    font-weight: 400;
+}
+
+.type-list li{
+    display: inline-block;
+}
+
+.type-list a {
+    text-decoration: none !important;
+    color: #4a4a4a;
+    font-size: 14px;
+    padding: 9px 10px 11px;
+    display: inline-block;
+    font-weight: 400;
+}
+
+.type-list a:hover {
+    color: #009cff;
+    border-bottom: 2px solid #0092ff;   
+}
+
+.book-item a {
+    text-decoration: none !important;
+}
+
+.book-item .img {
+    background: transparent;
+    width: 7vw;
+    height: 10vw;
+    float: left;
+    margin: 3px;
+    padding: 3px;
+}
+
+.book-item img{
+    max-width: 100%;
+    height: auto;
+}
+
+.book-item .title {
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    display: inline-block;
+    color: #000;
+    font-size: 25px;
+    max-width: 35vw;
+    word-wrap: break-word;
+    padding: 10px;
+}
+.book-item .author {
+    display: inline-block;
+    color: #000;
+    font-size: 14px;
+    max-width: 35vw;
+    word-wrap: break-word;
+    padding: 10px;
+    padding-top: 0px;
+}
+
+.page {
+    margin: 10px;
+    float: right;
+}
+
+.page a{
+    background: #f3f3f3;
+    color: #333;
+    display: inline-block;
+} 
+
+.selected-page {
+    background: #189eff;
+    color: #fff;
+    display: inline-block;
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+    line-height: 28px;
+    text-align: center;
+    font-size: 14px;
+
+}
+
+.next-page {
+    background: #f3f3f3;
+    color: #333;
+    display: inline-block;
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+    line-height: 28px;
+    text-align: center;
+    font-size: 14px;
+
+}
+
+.page a:hover {
+    background: #c1e7ff;
 }
