--- a/web/css/style.css
+++ b/web/css/style.css
@@ -261,16 +261,29 @@ body {
 }
 
 .section-center-header {
-    padding: 10px;
+    padding: 10px 10px 5px 10px;
+    display: block;
+    border-bottom: 1px solid #b3b3b3;
+}
+
+.section-center-header:before,
+.section-center-header:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .section-center-header .user {
     float: left;
     width: 40%;
 }
+.user a {
+    text-decoration: none !important;
+}
 
 .section-center-header .time{
     float: right;
+    margin-top: 15px;
 }
 
 .section-center-header .user img {
@@ -278,11 +291,24 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 25px;
+    margin-right: 10px;
 }
 
 .section-center-header .user p {
-    margin-left: 5px;
+    margin-top: 15px;
 }
+.section-center .new-book {
+    margin: 10px 10px 10px 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, .29);
+}
+
+.user:before,
+.user:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 
 /* content-right */
 
@@ -368,14 +394,13 @@ body {
     border-bottom: 2px solid #0092ff;   
 }
 
-.book-item:before,
-.book-item:after {
+.section-center .book-item:before,
+.section-center .book-item:after {
     content: "";
     display: table;
     clear: both;
 }
-
-.book-item {
+#search {
     margin: 10px 10px 10px 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, .29);
 }
@@ -387,12 +412,13 @@ body {
 .book-item .img {
     background: transparent;
     width: 7vw;
-    float: left;
+    float: left !important;
     margin: 3px;
     padding: 3px;
 }
 
 .book-item img{
+    border: 1px solid #fff;
     max-width: 100%;
     height: auto;
 }
@@ -405,15 +431,31 @@ body {
     max-width: 35vw;
     word-wrap: break-word;
     padding: 10px;
+    padding-bottom: 5px;
 }
 .book-item .author {
     display: inline-block;
+    font-style: italic;
     color: #000;
     font-size: 14px;
     max-width: 35vw;
     word-wrap: break-word;
     padding: 10px;
     padding-top: 0px;
+}
+
+.book-item .description {
+    color: #000;
+    font-size: 12px;
+    max-width: 35vw;
+    word-wrap: break-word;
+    margin-top: 10px;
+    padding: 10px 10px 0px 10px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .page {
