--- a/web/css/style.css
+++ b/web/css/style.css
@@ -261,6 +261,7 @@ body {
 }
 
 .section-center-header {
+    background-color: #F4F1EA;
     padding: 10px 10px 5px 10px;
     display: block;
     border-bottom: 1px solid #b3b3b3;
@@ -407,6 +408,10 @@ body {
 #search {
     margin: 10px 10px 10px 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, .29);
+}
+
+.book-item {
+    background-color: #fff;
 }
 
 .book-item a {
