--- a/web/css/style.css
+++ b/web/css/style.css
@@ -58,6 +58,10 @@ body {
     padding-top: 7px;
 }
 
+.logo a{
+    text-decoration: none;
+    color: #372213;
+}
 /* ========================= For menu =========================*/
 
 .menu {
