--- a/web/css/style.css
+++ b/web/css/style.css
@@ -67,6 +67,7 @@ body {
 .menu {
     flex-grow: 3;
     height: 100%;
+    overflow: hidden;
 }
 
 .menu ul {
@@ -533,4 +534,47 @@ body {
     background: #c1e7ff;
 }
 
+/*=========================== Book recently ===========================*/
 
+.book-recently{
+    display: block;
+    padding-top: 100px;
+    margin-bottom: 30px;
+    clear: both;
+}
+
+.book-recently h1{
+    border-bottom: 1px dotted #b3b3b3;
+}
+
+.items{
+    display: flex;
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    overflow-x: scroll;
+    overflow-y: hidden; 
+    white-space: nowrap;
+    selection {
+        display: inline-block;
+    }
+}
+
+.items h3{
+    margin-top: 0;
+    white-space: initial;
+}
+
+.items selection{
+    width: 30%;
+    height: 100%;
+    margin-right: 10px;
+    padding: 10px 5px;
+    border: 1px solid #b3b3b3;
+}
+
+.items selection img{
+    width: 100%;
+    height: 100%;
+}
