--- a/web/css/upload_book.css
+++ b/web/css/upload_book.css
@@ -64,8 +64,13 @@
 .elements input{
     width: 100%;
     background: #F9F7F4;
-    padding: 9px 0;
+    padding: 6px 0;
     border: none;
+}
+
+.elements >.input > a > input{
+    cursor: pointer !important;
+    font-weight: bold !important;
 }
 
 .elements textarea{
@@ -73,6 +78,34 @@
     background: #F9F7F4;
     padding: 7px 7px;
 }
+
+.indicator {
+    margin-top: 10px!important;
+    text-align: center!important;
+    font-family: Verdana,sans-serif;
+}
+
+.indicator button {
+    background-color: #e1e1e1!important;
+    border: none;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.indicator button:hover {
+    background-color: #ccc!important;
+}
+
+.slides-container {
+    position: relative;
+}
+
 
 .check-rules{
     text-align: left;
@@ -115,12 +148,13 @@
     padding: 7px 7px;
 }
 
-.borrow-book{
+.rate-book{
     display: flow-root;
     margin-top: 5px;
+    margin-left: 10px;
 }
 
-.borrow-book .rate{
+.rate-book .rate{
     margin-top: 7px;
     float: left;
 }
@@ -130,7 +164,7 @@
     margin-left: 5px;
 }
 
-.borrow-book a{
+a.borrow-book {
     float: right;
     text-decoration: none;
     padding: 6px 30px;
