--- a/web/css/style.css
+++ b/web/css/style.css
@@ -259,6 +259,12 @@ body {
     margin-top: 20px;
 }
 
+.content-center hr {
+    height: 6px;
+    background: url(http://ibrahimjabbari.com/english/images/hr-12.png) repeat-x 0 0;
+    border: 0;
+}
+
 .section-center {
     width: 100%;
     height: auto;
@@ -314,7 +320,7 @@ body {
     font-weight: bold; 
 }
 .section-center .new-book {
-    margin: 10px 10px 10px 10px;
+    margin: 10px 10px 30px 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, .29);
 }
 
