--- a/web/css/style.css
+++ b/web/css/style.css
@@ -619,3 +619,53 @@ a.login:hover{
     width: 100%;
     height: 100%;
 }
+
+.footer {
+    text-align: center;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin: 0px auto;
+    width: 70%;
+}
+
+.footer hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #eee;
+    height: 0;
+}
+
+.footer .panel-default {
+    font-size: 14px;
+    line-height: 1.4;
+    color: #333;
+    border-color: #ddd;
+    text-align: center; 
+    background-color :  #e5e5e5;
+}
+
+.footer .blockquote {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    margin: 0 0 20px;
+    font-size: 17.5px;
+    border-left: 5px solid #eee;
+    font-weight: 500;
+    line-height: 1.1;
+}
+
+.footer .blockquote-footer {
+    padding-top: 20px;
+    display: block;
+    font-size: 80%;
+    line-height: 1.42857143;
+    color: #777;
+}
+
+.footer .copyright {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.4;
+    color: #333;
+    margin-bottom: 10px;
+}
