--- a/web/css/style.css
+++ b/web/css/style.css
@@ -13,9 +13,15 @@ body {
 }
 
 .cover {
+    margin: 0px auto;
     width: 100%;
-    height: 200px;
+}
+
+.cover img{
+    width: 100%;
+    height: 250px;
     background: #EDEAE1;
+    object-fit: cover;
 }
 
 .header {
@@ -76,12 +82,14 @@ body {
 }
 
 .menu li {
+    font-family: Roboto, Helvetica, Arial, sans-serif;
     color: #f1f1f1;
     display: inline-block;
     width: 120px;
     height: 50px;
     line-height: 50px;
     margin-left: -5px;
+    font-size: 15px;
 }
 
 .menu a {
