--- a/web/css/style.css
+++ b/web/css/style.css
@@ -189,6 +189,30 @@ a.login:hover{
     display: block;
 }
 
+/*===================== For not yet login =====================*/
+.authen{
+    display: flex;
+    padding: 10px 5px;
+}
+
+.authen a{
+    display: block;
+    padding: 6px 8px;
+    margin-right: 1px;
+    background: #F4F1EA;
+    color: #372213;
+    text-decoration: none;
+    font-size: 17px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.authen a :hover{
+    background: #372213;
+    color: #F4F1EA;
+    /*transition-duration: 1s;*/
+}
 /* ====================== For main content ========================= */
 
 .content {
@@ -616,4 +640,43 @@ a.login:hover{
 .items selection img{
     width: 100%;
     height: 100%;
+}
+
+/*======================== for trading ===========================*/
+
+.trading{
+    margin-top: 20px;
+    width: 100%;
+}
+
+.trading ul {
+    background: #f4f1ea;
+    list-style-type: none;
+}
+
+.trading li {
+    text-align: center;
+    color: #372213;
+    display: inline-block;
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
+}
+.trading a {
+    text-decoration: none;
+    color: #372213;
+    display: block;
+}
+.trading a:hover {
+    background: #F1F1F1;
+    color: #333;
+}
+
+.select-items{
+    background: #F1F1F1;
+}
+
+#status-select{
+    margin-top: 10px;
+    padding: 3px;
 }
